# llm-judge

./: .flake8  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  REFACTORING_PLAN.md  REFACTORING_RESULTS.md  REFACTORING_STATUS.md  SECURITY.md  codecov.yml  config.example.yaml  judge.py  llm-judge.code-workspace  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: code-checks.yml  pr-checks.yml
src/llm_judge/: ARCHITECTURE.md  __init__.py  api.py  container.py  devstack.py  exceptions.py  factories.py  judge_config.yaml  judging.py  logging_config.py  prompts.py  prompts.yaml  runner.py  utils.py
src/llm_judge/domain/: __init__.py
src/llm_judge/infrastructure/: __init__.py  api_client.py  config_manager.py  judge_service.py  prompts_manager.py  repositories.py  utility_services.py  yaml_config_loader.py
src/llm_judge/services/: __init__.py
src/llm_judge/webapp/: __init__.py  job_manager.py  sse.py  websocket.py
tests/: test_api.py  test_api_client.py  test_cli.py  test_config_manager.py  test_container_and_factories.py  test_devstack.py  test_exceptions_logging.py  test_helpers.py  test_integration.py  test_judge_config.py  test_judge_service.py  test_judging.py  test_prompts.py  test_prompts_manager.py  test_repositories.py  test_runner.py  test_webapp.py  test_websocket_manager.py  test_yaml_config_loader.py
webui/: .prettierignore  eslint.config.js  index.html  knip.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
webui/src/: App.spec.ts  App.svelte  app.css  main.ts
webui/src/lib/: stores.spec.ts  stores.ts  types.ts
webui/src/lib/components/: ChatWindow.spec.ts  ChatWindow.svelte  ControlPanel.spec.ts  ControlPanel.svelte  MarkdownMessage.svelte  Scoreboard.spec.ts  Scoreboard.svelte  control-panel-helpers.ts
webui/types/: async-render.d.ts
