[project]
name = "llm-judge"
version = "0.1.0"
description = "LLM asymmetry test suite that scores model responses via OpenRouter."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.3",
    "openai>=2.2.0",
    "httpx[http2]>=0.28.1",
    "colorama>=0.4.6",
    "Flask>=3.0.3",
    "gevent>=24.2.1",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "types-colorama>=0.4.15",
    "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["uv-build>=0.3.0"]
build-backend = "uv_build"

[tool.uv.sources]
llm_judge = { path = "src/llm_judge" }

[tool.black]
line-length = 120
target-version = ["py310"]
preview = true

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedNamedTuple = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
pythonpath = ["src", "."]

[tool.coverage.run]
branch = true
parallel = true
source = ["llm_judge", "judge"]
omit = ["tests/*", ".venv/*"]
concurrency = ["thread"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 100
